mojoshader_lexer.c
/* Generated by re2c 1.0.3 */
/**
 * MojoShader; generate shader programs from bytecode of compiled
 *  Direct3D shaders.
 *
 * Please see the file LICENSE.txt in the source's root directory.
 *
 *  This file written by Ryan C. Gordon.
 */

// This was originally based on examples/pp-c.re from re2c: http://re2c.org/
//   re2c is public domain code.
//
// You build mojoshader_lexer_preprocessor.c from the .re file with re2c...
// re2c -is -o mojoshader_lexer_preprocessor.c mojoshader_lexer_preprocessor.re
//
// Changes to the lexer are done to the .re file, not the C code!
//
// Please note that this isn't a perfect C lexer, since it is used for both
//  HLSL and shader assembly language, and follows the quirks of Microsoft's
//  tools.

#define __MOJOSHADER_INTERNAL__ 1
#include "mojoshader_internal.h"

typedef unsigned char uchar;

#define YYMAXFILL 8

#define RET(t) return update_state(s, eoi, cursor, token, (Token) t)
#define YYCTYPE uchar
#define YYCURSOR cursor
#define YYLIMIT limit
#define YYMARKER s->lexer_marker
#define YYFILL(n) { if ((n) == 1) { cursor = sentinel; limit = cursor + YYMAXFILL; eoi = 1; } }

static uchar sentinel[YYMAXFILL];

static Token update_state(IncludeState *s, int eoi, const uchar *cur,
                          const uchar *tok, const Token val)
{
    if (eoi)
    {
        s->bytes_left = 0;
        s->source = (const char *) s->source_base + s->orig_length;
        if ( (tok >= sentinel) && (tok < (sentinel+YYMAXFILL)) )
            s->token = s->source;
        else
            s->token = (const char *) tok;
    } // if
    else
    {
        s->bytes_left -= (unsigned int) (cur - ((const uchar *) s->source));
        s->source = (const char *) cur;
        s->token = (const char *) tok;
    } // else
    s->tokenlen = (unsigned int) (s->source - s->token);
    s->tokenval = val;
    return val;
} // update_state

Token preprocessor_lexer(IncludeState *s)
{
    const uchar *cursor = (const uchar *) s->source;
    const uchar *token = cursor;
    const uchar *matchptr;
    const uchar *limit = cursor + s->bytes_left;
    int eoi = 0;
    int saw_newline = 0;



    // preprocessor directives are only valid at start of line.
    if (s->tokenval == ((Token) '\n'))
        goto ppdirective;  // may jump back to scanner_loop.

scanner_loop:
    if (YYLIMIT == YYCURSOR) YYFILL(1);
    token = cursor;


{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '\n':	goto yy9;
	case '\r':	goto yy11;
	case '!':	goto yy12;
	case '"':	goto yy14;
	case '#':	goto yy15;
	case '%':	goto yy17;
	case '&':	goto yy19;
	case '\'':	goto yy21;
	case '(':	goto yy22;
	case ')':	goto yy24;
	case '*':	goto yy26;
	case '+':	goto yy28;
	case ',':	goto yy30;
	case '-':	goto yy32;
	case '.':	goto yy34;
	case '/':	goto yy36;
	case '0':	goto yy38;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy40;
	case ':':	goto yy42;
	case ';':	goto yy44;
	case '<':	goto yy46;
	case '=':	goto yy48;
	case '>':	goto yy50;
	case '?':	goto yy52;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy54;
	case '[':	goto yy57;
	case '\\':	goto yy59;
	case ']':	goto yy60;
	case '^':	goto yy62;
	case '{':	goto yy64;
	case '|':	goto yy66;
	case '}':	goto yy68;
	case '~':	goto yy70;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
	{ if (eoi) { RET(TOKEN_EOI); } goto bad_chars; }
yy4:
	++YYCURSOR;
yy5:
	{ goto bad_chars; }
yy6:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= '\n') {
		if (yych == '\t') goto yy6;
	} else {
		if (yych <= '\f') goto yy6;
		if (yych == ' ') goto yy6;
	}
	{ if (s->report_whitespace) RET(' '); goto scanner_loop; }
yy9:
	++YYCURSOR;
yy10:
	{ s->line++; RET('\n'); }
yy11:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy9;
	goto yy10;
yy12:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy72;
	{ RET('!'); }
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '\n') goto yy5;
	if (yych == '\r') goto yy5;
	goto yy75;
yy15:
	yych = *++YYCURSOR;
	if (yych == '#') goto yy80;
	{ RET(TOKEN_HASH); }
yy17:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy82;
	{ RET('%'); }
yy19:
	yych = *++YYCURSOR;
	if (yych == '&') goto yy84;
	if (yych == '=') goto yy86;
	{ RET('&'); }
yy21:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '\n') goto yy5;
	if (yych == '\r') goto yy5;
	goto yy89;
yy22:
	++YYCURSOR;
	{ RET('('); }
yy24:
	++YYCURSOR;
	{ RET(')'); }
yy26:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy92;
	{ RET('*'); }
yy28:
	yych = *++YYCURSOR;
	if (yych == '+') goto yy94;
	if (yych == '=') goto yy96;
	{ RET('+'); }
yy30:
	++YYCURSOR;
	{ RET(','); }
yy32:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy98;
	if (yych == '=') goto yy100;
	{ RET('-'); }
yy34:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy35;
	if (yych <= '9') goto yy102;
yy35:
	{ RET('.'); }
yy36:
	yych = *++YYCURSOR;
	if (yych <= '.') {
		if (yych == '*') goto yy105;
	} else {
		if (yych <= '/') goto yy107;
		if (yych == '=') goto yy109;
	}
	{ RET('/'); }
yy38:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'X') goto yy114;
	if (yych == 'x') goto yy114;
	goto yy41;
yy39:
	{ RET(TOKEN_INT_LITERAL); }
yy40:
	yyaccept = 1;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
yy41:
	if (yych <= 'L') {
		if (yych <= '9') {
			if (yych == '.') goto yy102;
			if (yych <= '/') goto yy39;
			goto yy40;
		} else {
			if (yych == 'E') goto yy111;
			if (yych <= 'K') goto yy39;
			goto yy112;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'U') goto yy112;
			if (yych <= 'd') goto yy39;
			goto yy111;
		} else {
			if (yych <= 'l') {
				if (yych <= 'k') goto yy39;
				goto yy112;
			} else {
				if (yych == 'u') goto yy112;
				goto yy39;
			}
		}
	}
yy42:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy115;
	{ RET(':'); }
yy44:
	++YYCURSOR;
	{ if (s->asm_comments) goto singlelinecomment; RET(';'); }
yy46:
	yych = *++YYCURSOR;
	if (yych <= ';') goto yy47;
	if (yych <= '<') goto yy117;
	if (yych <= '=') goto yy119;
yy47:
	{ RET('<'); }
yy48:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy121;
	{ RET('='); }
yy50:
	yych = *++YYCURSOR;
	if (yych <= '<') goto yy51;
	if (yych <= '=') goto yy123;
	if (yych <= '>') goto yy125;
yy51:
	{ RET('>'); }
yy52:
	++YYCURSOR;
	{ RET('?'); }
yy54:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy56;
		if (yych <= '9') goto yy54;
		if (yych >= 'A') goto yy54;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy54;
		} else {
			if (yych <= '`') goto yy56;
			if (yych <= 'z') goto yy54;
		}
	}
yy56:
	{ RET(TOKEN_IDENTIFIER); }
yy57:
	++YYCURSOR;
	{ RET('['); }
yy59:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x08) goto yy5;
	if (yych <= '\r') goto yy128;
	if (yych == ' ') goto yy128;
	goto yy5;
yy60:
	++YYCURSOR;
	{ RET(']'); }
yy62:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy132;
	{ RET('^'); }
yy64:
	++YYCURSOR;
	{ RET('{'); }
yy66:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy134;
	if (yych == '|') goto yy136;
	{ RET('|'); }
yy68:
	++YYCURSOR;
	{ RET('}'); }
yy70:
	++YYCURSOR;
	{ RET('~'); }
yy72:
	++YYCURSOR;
	{ RET(TOKEN_NEQ); }
yy74:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy75:
	if (yych <= '\r') {
		if (yych == '\n') goto yy76;
		if (yych <= '\f') goto yy74;
	} else {
		if (yych <= '"') {
			if (yych <= '!') goto yy74;
			goto yy77;
		} else {
			if (yych == '\\') goto yy79;
			goto yy74;
		}
	}
yy76:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy5;
		} else {
			goto yy39;
		}
	} else {
		goto yy104;
	}
yy77:
	++YYCURSOR;
	{ RET(TOKEN_STRING_LITERAL); }
yy79:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'b') {
		if (yych <= '7') {
			if (yych <= '&') {
				if (yych == '"') goto yy74;
				goto yy76;
			} else {
				if (yych <= '\'') goto yy74;
				if (yych <= '/') goto yy76;
				goto yy74;
			}
		} else {
			if (yych <= '[') {
				if (yych == '?') goto yy74;
				goto yy76;
			} else {
				if (yych <= '\\') goto yy74;
				if (yych <= '`') goto yy76;
				goto yy74;
			}
		}
	} else {
		if (yych <= 'r') {
			if (yych <= 'm') {
				if (yych == 'f') goto yy74;
				goto yy76;
			} else {
				if (yych <= 'n') goto yy74;
				if (yych <= 'q') goto yy76;
				goto yy74;
			}
		} else {
			if (yych <= 'u') {
				if (yych == 't') goto yy74;
				goto yy76;
			} else {
				if (yych <= 'v') goto yy74;
				if (yych == 'x') goto yy138;
				goto yy76;
			}
		}
	}
yy80:
	++YYCURSOR;
	{ RET(TOKEN_HASHHASH); }
yy82:
	++YYCURSOR;
	{ RET(TOKEN_MODASSIGN); }
yy84:
	++YYCURSOR;
	{ RET(TOKEN_ANDAND); }
yy86:
	++YYCURSOR;
	{ RET(TOKEN_ANDASSIGN); }
yy88:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy89:
	if (yych <= '\r') {
		if (yych == '\n') goto yy76;
		if (yych <= '\f') goto yy88;
		goto yy76;
	} else {
		if (yych <= '\'') {
			if (yych <= '&') goto yy88;
		} else {
			if (yych == '\\') goto yy91;
			goto yy88;
		}
	}
	++YYCURSOR;
	goto yy39;
yy91:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'b') {
		if (yych <= '7') {
			if (yych <= '&') {
				if (yych == '"') goto yy88;
				goto yy76;
			} else {
				if (yych <= '\'') goto yy88;
				if (yych <= '/') goto yy76;
				goto yy88;
			}
		} else {
			if (yych <= '[') {
				if (yych == '?') goto yy88;
				goto yy76;
			} else {
				if (yych <= '\\') goto yy88;
				if (yych <= '`') goto yy76;
				goto yy88;
			}
		}
	} else {
		if (yych <= 'r') {
			if (yych <= 'm') {
				if (yych == 'f') goto yy88;
				goto yy76;
			} else {
				if (yych <= 'n') goto yy88;
				if (yych <= 'q') goto yy76;
				goto yy88;
			}
		} else {
			if (yych <= 'u') {
				if (yych == 't') goto yy88;
				goto yy76;
			} else {
				if (yych <= 'v') goto yy88;
				if (yych == 'x') goto yy139;
				goto yy76;
			}
		}
	}
yy92:
	++YYCURSOR;
	{ RET(TOKEN_MULTASSIGN); }
yy94:
	++YYCURSOR;
	{ RET(TOKEN_INCREMENT); }
yy96:
	++YYCURSOR;
	{ RET(TOKEN_ADDASSIGN); }
yy98:
	++YYCURSOR;
	{ RET(TOKEN_DECREMENT); }
yy100:
	++YYCURSOR;
	{ RET(TOKEN_SUBASSIGN); }
yy102:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	if (yych <= 'G') {
		if (yych <= 'D') {
			if (yych <= '/') goto yy104;
			if (yych <= '9') goto yy102;
		} else {
			if (yych <= 'E') goto yy111;
			if (yych <= 'F') goto yy140;
		}
	} else {
		if (yych <= 'e') {
			if (yych <= 'H') goto yy140;
			if (yych >= 'e') goto yy111;
		} else {
			if (yych == 'g') goto yy104;
			if (yych <= 'h') goto yy140;
		}
	}
yy104:
	{ RET(TOKEN_FLOAT_LITERAL); }
yy105:
	++YYCURSOR;
	{ goto multilinecomment; }
yy107:
	++YYCURSOR;
	{ goto singlelinecomment; }
yy109:
	++YYCURSOR;
	{ RET(TOKEN_DIVASSIGN); }
yy111:
	yych = *++YYCURSOR;
	if (yych <= ',') {
		if (yych == '+') goto yy141;
		goto yy76;
	} else {
		if (yych <= '-') goto yy141;
		if (yych <= '/') goto yy76;
		if (yych <= '9') goto yy142;
		goto yy76;
	}
yy112:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'U') {
		if (yych == 'L') goto yy112;
		if (yych <= 'T') goto yy39;
		goto yy112;
	} else {
		if (yych <= 'l') {
			if (yych <= 'k') goto yy39;
			goto yy112;
		} else {
			if (yych == 'u') goto yy112;
			goto yy39;
		}
	}
yy114:
	yych = *++YYCURSOR;
	if (yych <= '@') {
		if (yych <= '/') goto yy76;
		if (yych <= '9') goto yy144;
		goto yy76;
	} else {
		if (yych <= 'F') goto yy144;
		if (yych <= '`') goto yy76;
		if (yych <= 'f') goto yy144;
		goto yy76;
	}
yy115:
	++YYCURSOR;
	{ RET(TOKEN_COLONCOLON); }
yy117:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy146;
	{ RET(TOKEN_LSHIFT); }
yy119:
	++YYCURSOR;
	{ RET(TOKEN_LEQ); }
yy121:
	++YYCURSOR;
	{ RET(TOKEN_EQL); }
yy123:
	++YYCURSOR;
	{ RET(TOKEN_GEQ); }
yy125:
	yych = *++YYCURSOR;
	if (yych == '=') goto yy148;
	{ RET(TOKEN_RSHIFT); }
yy127:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
yy128:
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy76;
		if (yych != '\n') goto yy127;
	} else {
		if (yych <= '\r') goto yy131;
		if (yych == ' ') goto yy127;
		goto yy76;
	}
yy129:
	++YYCURSOR;
yy130:
	{ s->line++; goto scanner_loop; }
yy131:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy129;
	goto yy130;
yy132:
	++YYCURSOR;
	{ RET(TOKEN_XORASSIGN); }
yy134:
	++YYCURSOR;
	{ RET(TOKEN_ORASSIGN); }
yy136:
	++YYCURSOR;
	{ RET(TOKEN_OROR); }
yy138:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= '@') {
		if (yych <= '/') goto yy76;
		if (yych <= '9') goto yy74;
		goto yy76;
	} else {
		if (yych <= 'F') goto yy74;
		if (yych <= '`') goto yy76;
		if (yych <= 'f') goto yy74;
		goto yy76;
	}
yy139:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= '@') {
		if (yych <= '/') goto yy76;
		if (yych <= '9') goto yy88;
		goto yy76;
	} else {
		if (yych <= 'F') goto yy88;
		if (yych <= '`') goto yy76;
		if (yych <= 'f') goto yy88;
		goto yy76;
	}
yy140:
	++YYCURSOR;
	goto yy104;
yy141:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy76;
	if (yych >= ':') goto yy76;
yy142:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'G') {
		if (yych <= '9') {
			if (yych <= '/') goto yy104;
			goto yy142;
		} else {
			if (yych == 'F') goto yy140;
			goto yy104;
		}
	} else {
		if (yych <= 'f') {
			if (yych <= 'H') goto yy140;
			if (yych <= 'e') goto yy104;
			goto yy140;
		} else {
			if (yych == 'h') goto yy140;
			goto yy104;
		}
	}
yy144:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if (yych <= 'T') {
		if (yych <= '@') {
			if (yych <= '/') goto yy39;
			if (yych <= '9') goto yy144;
			goto yy39;
		} else {
			if (yych <= 'F') goto yy144;
			if (yych == 'L') goto yy112;
			goto yy39;
		}
	} else {
		if (yych <= 'k') {
			if (yych <= 'U') goto yy112;
			if (yych <= '`') goto yy39;
			if (yych <= 'f') goto yy144;
			goto yy39;
		} else {
			if (yych <= 'l') goto yy112;
			if (yych == 'u') goto yy112;
			goto yy39;
		}
	}
yy146:
	++YYCURSOR;
	{ RET(TOKEN_LSHIFTASSIGN); }
yy148:
	++YYCURSOR;
	{ RET(TOKEN_RSHIFTASSIGN); }
}


multilinecomment:
    if (YYLIMIT == YYCURSOR) YYFILL(1);
    matchptr = cursor;
// The "*\/" is just to avoid screwing up text editor syntax highlighting.

{
	YYCTYPE yych;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if (yych <= '\f') {
		if (yych <= 0x00) goto yy152;
		if (yych == '\n') goto yy156;
		goto yy154;
	} else {
		if (yych <= '\r') goto yy158;
		if (yych == '*') goto yy159;
		goto yy154;
	}
yy152:
	++YYCURSOR;
	{
                        if (eoi)
                            RET(TOKEN_INCOMPLETE_COMMENT);
                        goto multilinecomment;
                    }
yy154:
	++YYCURSOR;
yy155:
	{ goto multilinecomment; }
yy156:
	++YYCURSOR;
yy157:
	{
                        s->line++;
                        token = matchptr;
                        saw_newline = 1;
                        goto multilinecomment;
                    }
yy158:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy156;
	goto yy157;
yy159:
	yych = *++YYCURSOR;
	if (yych != '/') goto yy155;
	++YYCURSOR;
	{
                        if (saw_newline)
                            RET('\n');
                        else if (s->report_whitespace)
                            RET(' ');
                        goto scanner_loop;
                    }
}


singlelinecomment:
    if (YYLIMIT == YYCURSOR) YYFILL(1);
    matchptr = cursor;

{
	YYCTYPE yych;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy164;
		if (yych <= '\t') goto yy166;
		goto yy168;
	} else {
		if (yych == '\r') goto yy170;
		goto yy166;
	}
yy164:
	++YYCURSOR;
	{ if (eoi) { RET(TOKEN_EOI); } goto singlelinecomment; }
yy166:
	++YYCURSOR;
	{ goto singlelinecomment; }
yy168:
	++YYCURSOR;
yy169:
	{ s->line++; token = matchptr; RET('\n'); }
yy170:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy168;
	goto yy169;
}


ppdirective:
    if (YYLIMIT == YYCURSOR) YYFILL(1);
